# vael

./: .gitattributes  .gitignore  LICENSE  PLAN.md  README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts  vitest.config.ts
.github/workflows/: ci.yml
docs/design/: 00-architecture.md  01-editor-dualmode.md  02-large-file.md  03-encoding-io.md  04-md-export.md  05-security-dist.md  06-ux-mvp.md  99-risk-feasibility.md
docs/qa/: operator-testing.md
docs/qa/fixtures/: lossy-test.md  sample.md  watch-target.md
scripts/: make-test-log.ps1
src/: main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: encoding.rs  lib.rs  line_index.rs  main.rs
src-tauri/src/commands/: bigfile.rs  file.rs  mod.rs  search.rs  watch.rs
src/app/: app-shell.ts  command-palette.test.ts  command-palette.ts  commands.test.ts  commands.ts  status-bar.ts
src/editor/: cm-setup.ts  preview-pane.ts  source-view.ts  stream-viewer.ts
src/editor/preview/: export.test.ts  export.ts  prism.ts  prose-styles.ts  renderer.test.ts  renderer.ts
src/services/: export.ts  ipc.ts
src/types/: markdown-it-plugins.d.ts
