[package]
name = "vael"
version = "0.1.0"
description = "A lightweight, privacy-first editor for Markdown, text, and code."
authors = ["vael contributors"]
license = "MIT"
edition = "2021"
rust-version = "1.77"

# The library half of the app (so the same code can drive desktop & mobile).
[lib]
name = "vael_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Encoding / I-O (M1): WHATWG decode/encode + legacy charset detection + atomic save
encoding_rs = "0.8"
chardetng = "1"
tempfile = "3"
# Large-file streaming (M1): zero-copy random access + SIMD newline scanning
memmap2 = "0.9"
memchr = "2"
# Search (M1): ripgrep engine — linear-time regex (no catastrophic backtracking),
# streaming over multi-GB files. The structural fix for Notepad++'s regex hangs.
grep-searcher = "0.1"
grep-regex = "0.1"
grep-matcher = "0.1"
regex = "1"
# File watching (M2 #9): external-change detection, cross-platform, with a
# debouncer that coalesces the burst of events a single save emits.
notify = "8"
notify-debouncer-full = "0.5"

# Unix-only: reading the process umask (there is no read-only syscall for it) so
# a newly-created file gets the usual 0644-style mode instead of tempfile's 0600.
[target.'cfg(unix)'.dependencies]
libc = "0.2"

[features]
# Used by Tauri's mobile tooling; harmless on desktop.
default = []
